# python_practice_steps

./: class_practice_bank.ipynb  main.py  mtpl_pricing.ipynb  pyproject.toml  seaborn_iris_prac.ipynb  userbehaviorkaggle.ipynb
Class Practice/: class_practice_bank.html
Life Insurance/: VBT_2015.xlsx  life_insurance_pricing.ipynb  life_insurance_pricing_practice.ipynb  life_insurance_prod.ipynb
MTPL Pricing/: mtpl_pricing.ipynb  mtpl_pricing_website.html
Smaller Practice Files/: seaborn_iris_prac.ipynb
